maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:19: error: value += is not a member of Int
    right();angle+=1
                 ^PledgeMaze:21: error: value -= is not a member of Int
      left; angle -=1; forward()
                  ^PledgeMaze:28: error: value -= is not a member of Int
    left(); angle-=1
                 ^